--- a/style/styles.css
+++ b/style/styles.css
@@ -1,50 +1,155 @@
-html {
+* {
 	background-color: black;
-	color: rgb(106, 150, 189);
+	color: #6A96BD;
 	font-family: 'Young Serif', serif;
-	display: flex;
+	
+	
+}
+
+@media (min-width: 768px) {
+	.top > img {
+		width: 320px;
+		height: 200px;
+	}
+	.Imag .container .box-row {
+		flex-direction: column;
+	}
+
+}
+
+a{
+	color: #6591b1;
 }
 
 .logo {
-
 	align-self: start;
 	font-size: 50px;
 	height: 100%;
 	background-position: center;
 	background-size: cover;
+	color: #6A96BD;
 }
 
+nav {
+	color: rgb(106, 150, 189);
+	width: 100%;
+	
+}
 
+.navbar, .container-fluid {
+	background-color: black;
+	color: white;
 
-.Bienvenido, h3 {
-	color:  rgb(106, 150, 189);
+}
+
+.text-bg-dark {
+	background-attachment: fixed;
+  	opacity: 0.6;
+	background-size: cover;
+	background-position: center center;
+	width: auto;
+}
+
+.top {
+	align-items: center;
+}
+
+.top, h3 {
+	color:  #6A96BD;
 	text-align: center;
 	font-size: 30px;
 	
 }
 
-.Bienvenido, h5 {
-	color: white;
-	font-style: light;
+.top, h5 {
 	text-align: center;
 	font-size: 15px;
 
 }
 
-.fondoNube {
-	
-	background-image: url('https://cloudatlas.wmo.int/images/compressed/5133_main_crepuscular-rays-through-gaps-in-cloud_clouds-photometeors.JPG');
- 	background-repeat: no-repeat;
+.container {
+	display: flex;
+	width: 100%;
+	padding: 4% 2%;
+	box-sizing: border-box;
+	height: 100vh;
+}
+
+.box {
+	flex: 1;
+	overflow: hidden;
+	transition: .5s;
+	margin: 0,2%;
+	box-shadow: 0 20px 30 px rgba(0, 0, 0, .1);
+	line-height: 0;
+}
+
+.box > img {
+	width: 200%;
+	height: calc(100% - 10vh);
+	object-fit: cover;
+	transition: .5s;
+}
+
+.box >span {
+	font-size: 3.8vh;
+	display: block;
+	text-align: center;
+	height: 10vh;
+	line-height: 2.6;
+	color: #6A96BD;
+}
+
+.box:hover { flex: 1 1 50%}
+.box.box:hover > img {
+	width: 100%;
+	height: 100%;
+}
+
+
+
+/* .fondoNube {	
+	background-repeat: no-repeat;
   	background-attachment: fixed;
   	opacity: 0.6;
-	background-size: 100% 100%;
+	background-size: cover;
+	background-position: center center;
+	width: auto;
 }
 
 .fondoNube, h2 {
 	text-align: center;
 	color: white;
+} */
+
+.Imag, h4 {
+	text-align:center;
 }
 
-.textoSatel, h5 {
-	text-align: left;
+.Imag .container .box-row {
+  	display : flex;
+  	flex-direction : row;
 }
+
+.Imag .container .box .box-cell.box1 {
+	text-align:justify;
+	border: #6591b1;
+ }
+
+.Imag .container .box .box-cell.box2 {
+	text-align: justify;
+}
+
+.cartasTexto {
+	display: flex;
+	flex-wrap: wrap;
+	padding: auto;
+}
+
+.card mb-3 {
+	flex: 1 1 100px;
+}
+.card-text {
+	columns: auto 8rem;
+}
+
